--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,11 @@ jobs:
       - checkout
       - run: echo "Hello from jobs.hello-job.steps[1]"
       - say_hello_cmd
+  my-job:
+    docker:
+      - image: cimg/node:22.17
+    steps:
+      - run: echo "hello from my-job"
 
 workflows:
   my-workflow:
@@ -28,8 +33,4 @@ workflows:
       - hello-job
   other_workflow:
     jobs:
-      - my-job:
-          docker:
-            - image: cimg/node:22.17
-          steps:
-            - run: echo "hello from worflows.other_workflow.jobs[0].my-job.steps[0]"
+      - my-job
