--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,8 @@ jobs:
     docker:
       - image: cimg/node:lts
     steps:
-      - run: pwd
+      - run: whoami; pwd; ls -la $HOME
+      - run: mkdir -p /tmp/workspace
       - run: echo "bar" >> /tmp/workspace/foo.txt
       - persist_to_workspace:
           root: /tmp/workspace
@@ -56,8 +57,8 @@ workflows:
       - job1
       - job2
 
-  other-workflow:
-    jobs:
-      - my-job:
-          context:
-            - test-context
+  # other-workflow:
+  #   jobs:
+  #     - my-job:
+  #         context:
+  #           - test-context
