--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,25 +17,29 @@ commands:
 jobs:
   hello-job: # this is a job, it can run multiple steps.
     docker:
-      - image: cimg/node:22.17
+      - image: cimg/node:lts
     steps:
       - checkout
       - run: echo "Hello from jobs.hello-job.steps[1]"
       - say_hello_cmd
   my-job:
     docker:
-      - image: cimg/node:22.17
+      - image: cimg/node:lts
     steps:
       - run: echo "hello from my-job"
       - run: echo "Hello ${FOO}"
 
   job1:
     docker:
-      - image: cimg/node:lts
+      - image: cimg/base:current
     steps:
-      - run: whoami; pwd; ls -la $HOME
-      - run: mkdir -p /tmp/workspace
-      - run: echo "bar" >> /tmp/workspace/foo.txt
+      - run: >
+          echo "user: $(whoami)";
+          echo "pwd: $(pwd)";
+          echo -e "current dir:\n$(ls -la)"
+      - run: >
+          mkdir -p /tmp/workspace &&
+          echo $FOO >> /tmp/workspace/foo.txt
       - persist_to_workspace:
           root: /tmp/workspace
           paths:
@@ -43,22 +47,18 @@ jobs:
 
   job2:
     docker:
-      - image: cimg/node:lts
+      - image: cimg/base:current
     steps:
       - attach_workspace:
           at: /tmp/workspace
-      - run: ls -l /tmp/workspace
+      - run: cat /tmp/workspace/foo.txt
 
 # Workflows are responsible for orchestrating multiple jobs.
 # Define the run order, dependencies and approval.
 workflows:
   my-workflow:
     jobs:
-      - job1
+      - job1:
+          context:
+            - test-context
       - job2
-
-  # other-workflow:
-  #   jobs:
-  #     - my-job:
-  #         context:
-  #           - test-context
