--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,6 +33,7 @@ jobs:
     docker:
       - image: cimg/base:current
     steps:
+      - checkout
       - run: >
           echo "user: $(whoami)";
           echo "pwd: $(pwd)";
