--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,26 +57,12 @@ jobs:
     docker:
       - image: cimg/base:current
     steps:
-      # - run:
-      #     name: test 1 with >
-      #     command: >
-      #       ls -l | \
-      #       grep circleci
-      # - run:
-      #     name: test 2 with >
-      #     command: >
-      #       ls -l \
-      #       | grep circleci
       - run:
           name: test 3 with |
           command: |
             ls -l | \
-            grep circleci
-      - run:
-          name: test 4 with |
-          command: |
-            ls -l \
-            | grep circleci
+            grep circleci && \
+            echo hello
 
 workflows:
   my-workflow:
